# cl_server

./: .gitignore  .gitmodules  CLAUDE.md  MONITOR_SERVICES.md  README.md  README.txt  STARTUP_SCRIPTS.md  TASK_2_TEST_SUITE_IMPLEMENTATION.md  TEST_EXECUTION_REPORT.md  WORKER_STALING_ANALYSIS.md  alembic.ini  iterm2_cl_server_start.py  main.py  monitor_services.sh  pyproject.toml  requirements.txt  review_plan.md  start_all.sh  stop_all.sh  test_automated.sh  todo_list.md  verify_db.py
authentication/: alembic.ini  main.py
authentication/src/: auth_utils.py  routes.py  schemas.py  service.py
dart_clients/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md
data/: private_key.pem  public_key.pem
demos/inferences/: __init__.py  base_client.py  face_detection_client.py  image_embedding_client.py  plan.md  requirements.txt  utils.py
inference/: .gitignore  INTERNALS.md  ML_INFERENCE_GUIDE.md  README.md  alembic.ini  inference_requirements  main.py  pyproject.toml  test_mqtt_complete.py  test_worker.py  verify_endpoints.py
inference/src/: __init__.py  auth.py  config.py  database.py  file_storage.py  inference_stubs.py  job_service.py  qdrant_manager.py  queue.py  schemas.py  worker.py
media_store/: INTERNALS.md  README.md  debug_versioning.py  main.py  pyproject.toml  requirements.txt  schemas.py
server/: __init__.py  config.py  database.py  models.py  routes.py
services/inference/: README.md  alembic.ini  main.py  mqtt_subscriber.py  pyproject.toml  pytest.ini  start.sh  verify_implementation.py  verify_mqtt_flow.py  worker.sh
services/inference/alembic/: env.py
services/inference/src/: __init__.py  broadcaster.py  config.py  database.py  job_service.py  media_store_client.py  models.py  qdrant_manager.py  routes.py  worker.py
services/inference/src/inferences/: __init__.py  face_embedding.py
services/inference/tests/: __init__.py  conftest.py  test_vector_storage.py
services/media_store/: alembic.ini  main.py  pyproject.toml  requirements.txt  start.sh
services/media_store/alembic/versions/: 001_initial_schema.py
services/media_store/src/: INTERNALS.md  file_storage.py  routes.py  service.py
services/media_store/tests/: README.md  conftest.py  test_authentication.py
src/: app.py
tests/: .gitignore  FIELD_COVERAGE.md  conftest.py  pytest.ini  test_entity_crud.py  test_file_storage.py
vector_store/: .gitignore  README.md  docker-compose.yml  example_usage.py  requirements.txt  setup_path.sh  start.sh  stop.sh  vector_store_client.py  vector_store_requirement.md
(+90 files in other folders)
